// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.


syntax = "proto3";
package openpitrix;

// set go package name to pb
option go_package = "pb";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

message RuntimeLabel {
	google.protobuf.StringValue runtime_label_id = 1;
	google.protobuf.StringValue runtime_id = 2;
	google.protobuf.StringValue label_key = 3;
	google.protobuf.StringValue label_value = 4;
	google.protobuf.Timestamp   create_time = 5;
}

message Runtime {
	google.protobuf.StringValue runtime_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.StringValue provider = 4;
	google.protobuf.StringValue runtime_url = 5;
	google.protobuf.StringValue zone = 6;
	repeated RuntimeLabel labels = 7;
	google.protobuf.StringValue owner = 8;
	google.protobuf.StringValue status = 9;
	google.protobuf.Timestamp create_time = 10;
	google.protobuf.Timestamp status_time = 11;
}

message RuntimeDetail {
	Runtime runtime = 1;
	google.protobuf.StringValue runtime_credential = 2;
}


message CreateRuntimeRequest {
	google.protobuf.StringValue name = 1;
	google.protobuf.StringValue description = 2;
	google.protobuf.StringValue provider = 4;
	google.protobuf.StringValue runtime_url = 5;
	google.protobuf.StringValue zone = 6;
	google.protobuf.StringValue runtime_credential = 7;
	google.protobuf.StringValue labels = 8;
}

message CreateRuntimeResponse {
	google.protobuf.StringValue runtime_id = 1;
}

message DescribeRuntimesRequest {
	repeated string runtime_id = 1;
	repeated string status = 2;
	google.protobuf.StringValue search_word = 3;
	google.protobuf.StringValue label = 4;
	repeated string owner = 5;
	uint32 limit = 6;
	uint32 offset = 7;
}

message DescribeRuntimesResponse {
	uint32 total_count = 1;
	repeated Runtime runtime_set = 2;
	uint32 provider_count = 3;
	uint32 last_two_week_count = 4;
}

message DescribeRuntimeDetailsResponse {
	uint32 total_count = 1;
	repeated RuntimeDetail runtime_detail_set = 2;
}

message ModifyRuntimeRequest {
	google.protobuf.StringValue runtime_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.StringValue labels = 4;
}

message ModifyRuntimeResponse {
	google.protobuf.StringValue runtime_id = 1;
}

message DeleteRuntimesRequest {
	repeated string runtime_id = 1;
}

message DeleteRuntimesResponse {
	repeated string runtime_id = 1;
}

message DescribeRuntimeProviderZonesRequest {
	google.protobuf.StringValue provider = 1;
	google.protobuf.StringValue runtime_url = 2;
	google.protobuf.StringValue runtime_credential = 3;
}

message DescribeRuntimeProviderZonesResponse {
	google.protobuf.StringValue provider = 1;
	repeated string zone = 2;
}



service RuntimeManager {
	rpc CreateRuntime (CreateRuntimeRequest) returns (CreateRuntimeResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "create runtime"
		};
		option (google.api.http) = {
			post: "/v1/runtimes"
			body: "*"
		};
	}

	rpc DescribeRuntimeDetails (DescribeRuntimesRequest) returns (DescribeRuntimeDetailsResponse);
	rpc DescribeRuntimes (DescribeRuntimesRequest) returns (DescribeRuntimesResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe runtime"
		};
		option (google.api.http) = {
			get: "/v1/runtimes"
		};
	}

	rpc ModifyRuntime (ModifyRuntimeRequest) returns (ModifyRuntimeResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "modify runtime"
		};
		option (google.api.http) = {
			patch: "/v1/runtimes"
			body: "*"
		};
	}

	rpc DeleteRuntimes (DeleteRuntimesRequest) returns (DeleteRuntimesResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "delete runtimes"
		};
		option (google.api.http) = {
			delete: "/v1/runtimes"
			body: "*"
		};
	}

	rpc DescribeRuntimeProviderZones (DescribeRuntimeProviderZonesRequest) returns (DescribeRuntimeProviderZonesResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe runtime provider zones"
		};
		option (google.api.http) = {
			get: "/v1/runtimes/zones"
		};
	}


}
